--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,13 @@
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-sockjs</artifactId>
 			<version>3.0.0-SNAPSHOT</version>
-			<!-- <optional>true</optional> -->
 		</dependency>
+		<dependency>
+			<groupId>io.vertx</groupId>
+			<artifactId>vertx-hazelcast</artifactId>
+			<version>3.0.0-SNAPSHOT</version>
+		</dependency>
+
 	</dependencies>
 
 	<repositories>
@@ -69,7 +74,8 @@
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<manifestEntries>
-										<Main-Class>io.vertx.example.HelloWorldEmbedded</Main-Class>
+										<Main-Class>io.vertx.core.Starter</Main-Class>
+										<Main-Verticle>nl.sogeti.MainVerticle</Main-Verticle>
 									</manifestEntries>
 								</transformer>
 								<transformer
