--- a/pom.xml
+++ b/pom.xml
@@ -5,24 +5,32 @@
 	<artifactId>vertx3-chat</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+	<properties>
+		<vertx.version>3.0.0-SNAPSHOT</vertx.version>
+	</properties>
+
 	<dependencies>
 
 		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-core</artifactId>
-			<version>3.0.0-SNAPSHOT</version>
+			<version>${vertx.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-sockjs</artifactId>
-			<version>3.0.0-SNAPSHOT</version>
+			<version>${vertx.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-hazelcast</artifactId>
-			<version>3.0.0-SNAPSHOT</version>
+			<version>${vertx.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>io.vertx</groupId>
+			<artifactId>vertx-mongo-service</artifactId>
+			<version>${vertx.version}</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
@@ -30,7 +38,7 @@
 			<id>snapshots-repo</id>
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 			<releases>
-				<enabled>false</enabled>
+				<enabled>true </enabled>
 			</releases>
 			<snapshots>
 				<enabled>true</enabled>
