--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,19 @@
 		</dependency>
 		<dependency>
 			<groupId>io.vertx</groupId>
+			<artifactId>vertx-unit</artifactId>
+			<version>${vertx.version}</version>
+		</dependency>
+		
+		<dependency>
+	<groupId>junit</groupId>
+	<artifactId>junit</artifactId>
+	<version>4.11</version>
+</dependency>
+
+
+		<dependency>
+			<groupId>io.vertx</groupId>
 			<artifactId>vertx-mongo-service</artifactId>
 			<version>${vertx.version}</version>
 		</dependency>
@@ -38,7 +51,7 @@
 			<id>snapshots-repo</id>
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 			<releases>
-				<enabled>true </enabled>
+				<enabled>true</enabled>
 			</releases>
 			<snapshots>
 				<enabled>true</enabled>
